@@ -1,6 +1,8 @@
 2023-02-15  G. Branden Robinson <g.branden.robinson@gmail.com>
 
-	* configure.ac: Call new macro
+	* configure.ac: Add Automake conditional, `HAVE_GHOSTSCRIPT`, so
+	that we can populate the list of PDF device font tests
+	dynamically.  Call new macro
 	`GROFF_GHOSTSCRIPT_AVAILABILITY_NOTICE`.  Call
 	`GROFF_GHOSTSCRIPT_VERSION_NOTICE` after it, but before
 	`GROFF_URW_FONTS_NOTICE`.
@@ -21,6 +23,11 @@
 	(GROFF_URW_FONTS_NOTICE): Identify 'U' as the foundry name
 	gropdf uses for the URW fonts.  Confirm continuing availability
 	of most recent URW fonts release; bump date.
+	* font/devpdf/devpdf.am: Test availability of "basic" (PDF base
+	14) fonts (plus groff's "EURO") if either Ghostscript or URW
+	fonts are available.  Test availability of URW fonts (35) only
+	if Ghostscript _and_ the URW fonts were found at configuration
+	time.
 
 	Fixes <https://savannah.gnu.org/bugs/?63808>.  Thanks to Deri
 	James for the report and extremely helpful pseudocode.
